syntax = "proto3";

package pb;

import "admitPatient_attributes.proto";

option go_package = "./pb";

service AdmitPatientService{

    rpc AdmitPatient(AdmitPatientParameters) returns (AddedAdmitPatientResult){}
}